--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="./p5.min.js"></script>
     <script src="./addons/p5.dom.min.js"></script>
     <script src="./addons/p5.sound.min.js"></script>
-    <script src="./solitare_triangle/sketch.js"></script>
-    <script src="./solitare_triangle/pin.js"></script>
+    <script src="./sketch.js"></script>
+    <script src="./pin.js"></script>
   </head>
   <body>
   </body>
