--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 	<h1>Solitare - The hardest IQ test ever! Probably...</h1>
 	<div id="game_div" style="position: relative;"></div>
 	<p>
-		Game creator: Dmitry "DimAstr" Astretsov
-		<br><a href="https://vk.com/dmastr">https://vk.com/dmastr</a> // <a href="https://t.me/dimastr">Telegram: @dimastr</a>
+		Game creator: Dmitry Astretsov
+		<br><a href="https://vk.com/dmastr">https://vk.com/dmastr</a> // <a href="https://t.me/dmastr">Telegram: @dmastr</a> // <a href="https://www.facebook.com/dmitry.astretsov.3">facebook</a>
 		<br><br>Advisor & Host: Roman "Rioran" Voronov
 		<br><a href="http://www.vk.com/rioran">https://vk.com/rioran</a> // <a href="https://t.me/rioran">Telegram: @rioran</a>
 	</p>
