Change canvas, add input with limits

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 	</head>
 	<body>
 	<h1>Solitare - The hardest IQ test ever! Probably...</h1>
-	<div id="game_div" style="position: relative;"></div>
+    <div id="game_div" style="position: relative;">
+        <input id="rows" max="15" min="4" type="number" style="position: absolute; left: 19px; top: 100px; width: 35px; height: 16px;"/>
+    </div>
 	<p>
 		Game creator: Dmitry Astretsov
 		<br><a href="https://vk.com/dmastr">https://vk.com/dmastr</a> // <a href="https://t.me/dmastr">Telegram: @dmastr</a> // <a href="https://www.facebook.com/dmitry.astretsov.3">facebook</a>
